--- a/src/app/ui/user/dashboard/dashboard.component.html
+++ b/src/app/ui/user/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
 <button (click)="onSignOut()">Logout</button>
+@if(isAdmin()) {
+    <button (click)="onSignOut()">Admin</button>
+} 
 <br />
 <pre>{{ user$ | async | json  }}</pre>
