--- a/src/app/ui/user/dashboard/dashboard.component.html
+++ b/src/app/ui/user/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<dashboard-toolbar></dashboard-toolbar>
 <button (click)="onSignOut()">Logout</button>
 @if(isAdmin()) {
     <button (click)="onSignOut()">Admin</button>
