--- a/src/app/ui/user/dashboard/utils/toolbar/toolbar.component.html
+++ b/src/app/ui/user/dashboard/utils/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="mat-elevation-z3" style="background-color: black;">
-    <button mat-icon-button>
+    <button mat-icon-button (click)="toggleCollapsed()">
         <mat-icon style="color: white">menu</mat-icon>
     </button>
     <span class="app-title">GC App</span>
