--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,6 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.mat-progress-spinner circle, .mat-spinner circle {
-    stroke: white !important;
+.mat-menu-panel {
+    background-color: #fff;
 }
