--- a/src/app/ui/user/dashboard/features/core/bottom-sheets/add-weight/add-weight.component.css
+++ b/src/app/ui/user/dashboard/features/core/bottom-sheets/add-weight/add-weight.component.css
@@ -5,7 +5,8 @@
     justify-content: center;
     width: 100%;
     box-sizing: border-box;
-    padding: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 .aw-form { width: 100%; margin-top: 10px; }
 .fullwidth { width: 100%; }
@@ -14,5 +15,15 @@
     flex-direction: row;
 }
 .align-right { text-align: end; }
-
+.save-btn {
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    box-sizing: border-box;
+    justify-content: end;
+}
+.save-btn button {
+    background-color: #8D0000;
+    color: white;
+}
 
