--- a/src/app/ui/user/dashboard/dashboard.component.html
+++ b/src/app/ui/user/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
             <button mat-menu-item>Item 2</button>
             <button mat-menu-item (click)="openAddWeightBottomSheet()">
                 <mat-icon class="material-symbols-sharp">monitor_weight_gain</mat-icon>
-                <span>Add today weight</span>
+                <span>Guardar peso de hoy</span>
             </button>
         </mat-menu>
     </mat-sidenav-content>
