--- a/src/app/ui/user/dashboard/features/core/bottom-sheets/add-weight/add-weight.component.html
+++ b/src/app/ui/user/dashboard/features/core/bottom-sheets/add-weight/add-weight.component.html
@@ -1,5 +1,5 @@
 <div class="add-weight-container">
-    <span>Today's Date: {{ todaysDate | date: 'MMMM dd, yyyy' }}</span>
+    <span>Fecha de hoy: {{ todaysDate | date: 'MMMM dd, yyyy' }}</span>
     <form [formGroup]="addWeightForm" class="aw-form" (ngSubmit)="onSubmitData()">
         <mat-form-field appearance="outline" class="fullwidth">
             <mat-label>Peso</mat-label>
@@ -40,23 +40,23 @@
                 <mat-label>Masa Grasa</mat-label>
                 <input matInput placeholder="24.2" formControlName="bodyFat" type="number" step="0.01">
                 <span matTextSuffix>%</span>
-                <!--@if(loginForm.get('email')?.hasError('required')) {
-                <mat-error>Email is <strong>required</strong></mat-error>
+                @if(addWeightForm.get('bodyFat')?.hasError('required')) {
+                    <mat-error>Este campo es <strong>requerido</strong></mat-error>
                 }
-                @if(loginForm.get('email')?.hasError('email') && !loginForm.get('email')?.hasError('required')) {
-                <mat-error>Email is <strong>invalid</strong></mat-error>
-                }-->
+                @if(addWeightForm.get('bodyFat')?.hasError('pattern') && !addWeightForm.get('bodyFat')?.hasError('required')) {
+                    <mat-error>Formato <strong>inválido</strong></mat-error>
+                }
             </mat-form-field>
             <mat-form-field appearance="outline" class="fullwidth">
                 <mat-label>Masa Muscular</mat-label>
                 <input matInput placeholder="40.50" formControlName="muscle" type="number" step="0.01">
                 <span matTextSuffix>%</span>
-                <!--@if(loginForm.get('email')?.hasError('required')) {
-                <mat-error>Email is <strong>required</strong></mat-error>
+                @if(addWeightForm.get('muscle')?.hasError('required')) {
+                    <mat-error>Este campo es <strong>requerido</strong></mat-error>
                 }
-                @if(loginForm.get('email')?.hasError('email') && !loginForm.get('email')?.hasError('required')) {
-                <mat-error>Email is <strong>invalid</strong></mat-error>
-                }-->
+                @if(addWeightForm.get('muscle')?.hasError('pattern') && !addWeightForm.get('muscle')?.hasError('required')) {
+                    <mat-error>Formato <strong>inválido</strong></mat-error>
+                }
             </mat-form-field>
         </Layout> <!-- ./End Layout -->
         <div class="save-btn">
@@ -68,20 +68,5 @@
                 }
             </button>
         </div>
-        
     </form>
 </div>
-        
-        <!--<Row>
-            
-        </Row> -->
-        <!--<mat-form-field appearance="outline" style="margin-bottom: 10px;">
-            <mat-label>{{ 'auth.login.pass-field' | translate }}</mat-label>
-            <input matInput formControlName="password" type="password">
-            <mat-icon matSuffix>key</mat-icon>
-            @if(lginForm.get('password')?.hasError('required')) {
-            <mat-error>Password is <strong>required</strong></mat-error>
-            }
-        </mat-form-field>
-
-        -->
