--- a/src/app/ui/user/dashboard/features/core/bottom-sheets/add-weight/add-weight.component.html
+++ b/src/app/ui/user/dashboard/features/core/bottom-sheets/add-weight/add-weight.component.html
@@ -1,8 +1,3 @@
-<!--@defer (when isLoading()) {
-    <div class="loading">
-        <span class="loader"></span>
-    </div>
-}-->
 <Loading [activated]="isLoading()" loader="scale-up"></Loading>
 <div class="add-weight-container">
     <span>Fecha de hoy: {{ todaysDate | date: 'MMMM dd, yyyy' }}</span>
@@ -70,7 +65,7 @@
                 @if(isLoading() === false) {
                 Guardar datos
                 } @else {
-                <span class="loader"></span>
+                Guardando ...
                 }
             </button>
         </div>
