--- a/src/app/ui/user/dashboard/dashboard.component.html
+++ b/src/app/ui/user/dashboard/dashboard.component.html
@@ -1,55 +1,1 @@
-<p>Dashboard works</p>
-
-<!--<mat-toolbar class="mat-elevation-z3" style="background-color: black;">
-    <button mat-icon-button (click)="onToggleSidenav()">
-        <mat-icon style="color: white">menu</mat-icon>
-    </button>
-    <span class="app-title">GC App</span>
-    <span class="spacer"></span>
-    <button mat-icon-button>
-        <mat-icon style="color: white">language</mat-icon>
-    </button>
-    <button mat-icon-button>
-        <mat-icon style="color: white">notifications</mat-icon>
-    </button>
-    <button mat-icon-button>
-        <mat-icon style="color: white" [matMenuTriggerFor]="userMenu">account_circle</mat-icon>
-    </button>
-    <mat-menu #userMenu="matMenu" style="background-color: white !important;">
-        <button mat-menu-item>
-            <mat-icon>face</mat-icon>
-            <span>Profile</span>
-        </button>
-        <button mat-menu-item>
-            <mat-icon>logout</mat-icon>
-            <span>Logout</span>
-        </button>
-    </mat-menu>
-</mat-toolbar> 
-<mat-sidenav-container>
-    <mat-sidenav opened mode="side" [style.width]="sideNavWidth()" class="main-nav">
-        <sidenav-content 
-            [userName]="(user$ | async)?.displayName"
-            [userPhoto]="(user$ | async)?.photoURL"
-            [isAdmin]="isAdmin()"
-        />
-    </mat-sidenav>
-    <mat-sidenav-content class="content">
-        @if(!showWeightReminder()) {
-            <InfoCard 
-                text="¡No olvides ingresar tu peso hoy! Tu compromiso es clave para alcanzar tus metas de salud."
-                type="warning"
-            />
-        }
-        <button mat-fab class="fab-button" [matMenuTriggerFor]="fabMenu">
-            <mat-icon style="color: white;">add_circle</mat-icon>
-        </button>
-        <mat-menu #fabMenu="matMenu">
-            <button mat-menu-item (click)="openAddWeightBottomSheet()">
-                <mat-icon class="material-symbols-sharp">monitor_weight_gain</mat-icon>
-                <span>Guardar peso de hoy</span>
-            </button>
-        </mat-menu>
-    </mat-sidenav-content>
-</mat-sidenav-container>-->
-
+<p>dashboard works!</p>
