--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-menu-panel {
     background-color: #fff;
 }
+
+.loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    height: calc(100vh - 16px);
+    width: 100%;
+}
+   
+.loader {
+    width: 120px;
+    height: 20px;
+    border-radius: 20px;
+    background:
+    linear-gradient(#850000 0 0) 0/0% no-repeat
+    lightblue;
+    animation: l2 .5s infinite steps(10);
+}
+@keyframes l2 {
+    100% {background-size:110%}
+}
