--- a/src/app/features/main/main/pricing/pricing.component.css
+++ b/src/app/features/main/main/pricing/pricing.component.css
@@ -20,7 +20,6 @@
   box-shadow: 10px 10px 15px -3px rgba(0,0,0,0.1),
               -10px -10px 15px -3px rgba(0,0,0,0.1);
   transition: transform 0.3s, scale 0.3s ease-in-out;
-  transform: translateX(-50px);
 
   ul {
     list-style: none;
@@ -31,6 +30,12 @@
   li {
     padding: 5px;
   }
+}
+
+.active-btn {
+  background-color: #880000 !important;
+  color: white;
+  margin-top: 16px;
 }
 
 .pricing-card:hover {
