--- a/src/app/features/auth/authenticate/authenticate.component.css
+++ b/src/app/features/auth/authenticate/authenticate.component.css
@@ -5,3 +5,10 @@
     height: 100%;
     width: 100%
 }
+
+@media (max-width: 768px) {
+    .auth-wrapper {
+        box-sizing: border-box;
+        padding: 16px;
+    }
+}
