--- a/src/app/features/auth/authenticate/sign-in/sign-in.css
+++ b/src/app/features/auth/authenticate/sign-in/sign-in.css
@@ -1,7 +1,8 @@
 .auth-card {
     width: 900px;
     height: 300px;
-    padding: 0px 16px
+    padding: 0px 16px;
+    box-sizing: border-box;
 }
 
 .auth-progress {
@@ -58,3 +59,14 @@
 .mr8 { margin-right: 8px; }
 .auth-next-btn { background-color: #850000 !important; margin-left: 16px; }
 .auth-text-general { color: #000 !important; }
+
+@media (max-width: 1024px) {
+    .auth-card {
+      width: 100%;
+
+    }
+}
+
+@media (max-width: 768px) {
+
+}
