--- a/src/app/features/auth/authenticate/sign-in/sign-in.html
+++ b/src/app/features/auth/authenticate/sign-in/sign-in.html
@@ -1,4 +1,4 @@
-<mat-card class="auth-card mat-elevation-z5">
+<mat-card class="auth-card mat-elevation-z5" gcResponsive>
     @if(isLoading()) {
         <mat-progress-bar [mode]="'query'" class="auth-progress"></mat-progress-bar>
     }
