--- a/src/app/features/user/user.component.css
+++ b/src/app/features/user/user.component.css
@@ -17,7 +17,10 @@
 }
 .user-sidenav {
     padding: 16px;
-    width: 250px;
+    width: 300px;
+}
+.user-drawer-content {
+    padding: 16px;
 }
 .spacer { flex: 1 1 auto; }
 .ml8 { margin-left: 8px; }
