--- a/src/app/features/user/nutrition-label-analysis/nutrition-label-analysis.component.css
+++ b/src/app/features/user/nutrition-label-analysis/nutrition-label-analysis.component.css
@@ -2,50 +2,45 @@
     display: flex;
     flex-direction: column;
     height: calc(100vh - 100px);
+    box-sizing: border-box;
   }
-  .camera-container, .preview-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+  /* Camera Container */ 
+  .camera-container {
     position: relative;
-  }
-  video, img {
     width: 100%;
-    max-height: 80vh;
+    height: 100%;
+  }
+
+  .camera-container video {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
   }
-  .capture-btn {
+
+  button[mat-mini-fab] {
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: #ff0000;
-    border: none;
-    color: white;
-    font-size: 24px;
+    z-index: 10;
+  }
+
+  /* Preview Container */
+  .preview-container {
+    width: 100%;
+    max-width: 100vh;
+    box-sizing: border-box;
+  }
+  .preview-container img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
   }
   .button-container {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 20px;
-  }
-  .delete-btn, .done-btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  .delete-btn {
-    background-color: #ff4136;
-    color: white;
-  }
-  .done-btn {
-    background-color: #2ecc40;
-    color: white;
+    padding: 8px;
+    box-sizing: border-box;
   }
