--- a/src/app/features/main/main/header/header.component.html
+++ b/src/app/features/main/main/header/header.component.html
@@ -1,11 +1,20 @@
-<header class="fixed-header">
+<header class="main-header">
     <nav>
         <a href="#" class="logo">Your Logo</a>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#pricing">Pricing</a></li>
             <li><a href="#feedback">Feedback</a></li>
-            <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 </header>
+<!--<mat-toolbar class="main-header">
+    <nav>
+        <img src="images/logo/nut-app-logo.png" width="32px"/>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#feedback">Feedback</a></li>
+      </ul>
+    </nav>    
+</mat-toolbar>-->
