--- a/src/app/features/main/main/hero/hero.component.css
+++ b/src/app/features/main/main/hero/hero.component.css
@@ -36,3 +36,19 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .hero-section {
+        .hero-content {
+            h1 {
+                font-size: 1.5rem;
+                line-height: 1.3;
+                margin-bottom: 32px;
+                
+            }
+            p {
+                font-size: 1rem;
+            }
+        }
+    }
+}
