--- a/src/app/features/main/main/hero/hero.component.html
+++ b/src/app/features/main/main/hero/hero.component.html
@@ -1,6 +1,6 @@
 <section id="home" class="hero-section">
     <div class="hero-content">
-        <h1>Transform Your Life with Nutrition</h1>
+        <h1>Transforma tu vida con hábitos saludables</h1>
         <p>Personalized nutrition plans to help you achieve your health goals</p>
         <button class="cta-button" (click)="goToSignIn()">Get Started</button>
     </div>
