--- a/src/app/features/main/main/header/header.component.html
+++ b/src/app/features/main/main/header/header.component.html
@@ -2,8 +2,8 @@
     <nav>
         <a href="#" class="logo">Your Logo</a>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#pricing">Precios</a></li>
             <li><a href="#feedback">Feedback</a></li>
       </ul>
     </nav>
