--- a/src/app/features/main/main/hero/hero.component.html
+++ b/src/app/features/main/main/hero/hero.component.html
@@ -1,7 +1,7 @@
 <section id="home" class="hero-section">
     <div class="hero-content">
         <h1>Transforma tu vida con hábitos saludables</h1>
-        <p>Personalized nutrition plans to help you achieve your health goals</p>
-        <button class="cta-button" (click)="goToSignIn()">Get Started</button>
+        <p>Planes personalizados de nutrición y/o entrenamiento enfocados a llevar tu cuerpo y mente al siguiente nivel.</p>
+        <button class="cta-button" (click)="goToSignIn()">¡Empieza ahora!</button>
     </div>
 </section>
