--- a/src/app/features/main/main/hero/hero.component.css
+++ b/src/app/features/main/main/hero/hero.component.css
@@ -28,7 +28,7 @@
         .cta-button {
             padding: 1rem 2rem;
             font-size: 1.2rem;
-            background-color: #4CAF50;
+            background-color: #850000;
             color: white;
             border: none;
             border-radius: 5px;
@@ -39,15 +39,16 @@
 
 @media screen and (max-width: 768px) {
     .hero-section {
+
         .hero-content {
             h1 {
-                font-size: 1.5rem;
+                font-size: 1.8rem;
                 line-height: 1.3;
                 margin-bottom: 32px;
                 
             }
             p {
-                font-size: 1rem;
+                font-size: 1.2rem;
             }
         }
     }
