--- a/src/app/features/main/main/pricing/pricing.component.css
+++ b/src/app/features/main/main/pricing/pricing.component.css
@@ -1,7 +1,7 @@
 .pricing-section {
   padding: 20px 20px;
   text-align: center;
-  background-color: e1e1e1;
+  background-color: #e1e1e1;
 }
 
 .pricing-wrapper {
@@ -41,6 +41,20 @@
 .pricing-card:hover {
   scale: 1.05;
 
+}
+
+.fullWidth { width: 100%; }
+
+@media screen and (max-width: 768px) {
+  .pricing-wrapper {
+    flex-direction: column;
+    gap: 20px;
+    box-sizing: border-box;
+  }
+  .pricing-card { 
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
 /*
 
