--- a/src/app/features/user/barcode-scanner/barcode-scanner.component.html
+++ b/src/app/features/user/barcode-scanner/barcode-scanner.component.html
@@ -1,1 +1,36 @@
-<zxing-scanner (scanSuccess)="onCodeResult($event)"></zxing-scanner>
+@if(!isMobile) {
+    <ng-container>
+        <div class="not-mobile-container">
+            <ng-lottie [options]="options" width="200px"/>
+            <p>{{ 'user.barcode.is-not-mobile' | translate }}</p>
+        </div>
+    </ng-container>
+} @else {
+    @if (hasPermission === undefined) {
+        <ng-container>
+            <h2>Waiting for permissions.</h2>
+            <blockquote>
+                If your device does not has cameras, no permissions will be asked.
+            </blockquote>
+        </ng-container>
+    } @else if (hasPermission === false) {
+        <ng-container>
+            <h2>No devices were found.</h2>
+            <blockquote>
+                I believe your device has no media devices attached to.
+            </blockquote>
+        </ng-container>
+    }
+
+    <zxing-scanner
+    [torch]="torchEnabled"
+    [device]="deviceCurrent"
+    (deviceChange)="onDeviceChange($event)"
+    (scanSuccess)="onCodeResult($event)"
+    [formats]="allowedFormats"
+    [tryHarder]="tryHarder"
+    (camerasFound)="onCamerasFound($event)"
+    (permissionResponse)="onHasPermission($event)"
+    (torchCompatible)="onTorchCompatible($event)"></zxing-scanner>
+<p>Value: {{ codeResult }}</p>
+}
