--- a/src/app/features/user/barcode-scanner/barcode-scanner.component.html
+++ b/src/app/features/user/barcode-scanner/barcode-scanner.component.html
@@ -1,5 +1,5 @@
 <section class="barcode-wrapper">
-    @if(!isMobile) {
+    @if(isMobile) {
         <ng-container>
             <div class="not-mobile-container">
                 <ng-lottie [options]="options" width="200px"/>
