--- a/src/app/libs/compose-ui/loading/loading.html
+++ b/src/app/libs/compose-ui/loading/loading.html
@@ -1,4 +1,4 @@
 <section class="loading-wrapper">
-    <img [src]="path" alt="Loading" width="150px" />
+    <ng-lottie [options]="options" width="200px"/>
     <p>{{ text() }}</p>
 </section>
